--- a/loja/templates/seller_page.html
+++ b/loja/templates/seller_page.html
@@ -11,6 +11,7 @@
         margin: 0;
         display: flex;
         flex-direction: column;
+        min-height: 100vh;
       }
       body {
         font-family: Arial, sans-serif;
