--- a/loja/templates/login.html
+++ b/loja/templates/login.html
@@ -39,12 +39,12 @@
     {% endif %}
     <form method="POST">
       {% csrf_token %}
-      <input type="text" name="username" placeholder="Nome de usuário" required>
-      <input type="password" name="password" placeholder="Senha" required>
-      <button type="submit" class="btn">Entrar</button>
+      <input type="text" name="username" placeholder="Username" required>
+      <input type="password" name="password" placeholder="Password" required>
+      <button type="submit" class="btn">Login</button>
     </form>
     <div class="link">
-      <p>Não tem conta? <a href="{% url 'register' %}">Registe-se</a></p>
+      <p>Don't have an account?<a href="{% url 'register' %}"> Sign-up</a></p>
     </div>
   </div>
 </body>
