--- a/loja/templates/login.html
+++ b/loja/templates/login.html
@@ -35,7 +35,7 @@
   <div class="container">
     <h2>Login - TechMart</h2>
     {% if form.errors %}
-      <p style="color:red;">Erro: verifique as credenciais.</p>
+      <p style="color:red;">Error: check credetials.</p>
     {% endif %}
     <form method="POST">
       {% csrf_token %}
