--- a/loja/templates/seller_page.html
+++ b/loja/templates/seller_page.html
@@ -87,27 +87,27 @@
     </style>
   </head>
   <body>
-    <header>Painel do Vendedor - TechMart</header>
+    <header>Supplier Panel - TechMart</header>
     <div class="content">
       <div class="card">
-        <h3>Produtos</h3>
-        <p>Adicionar, editar e gerir produtos.</p>
-        <a href="{% url 'produto_list' %}">Gerir Produtos</a>
+        <h3>Products</h3>
+        <p>Add, edit e manage produtos.</p>
+        <a href="{% url 'produto_list' %}">Manage Products</a>
       </div>
       <div class="card">
-        <h3>Pedidos</h3>
-        <p>Ver pedidos feitos pelos clientes e atualizar status.</p>
-        <a href="#">Gerir Pedidos</a>
+        <h3>Requests</h3>
+        <p>Check requests made by clients e update status.</p>
+        <a href="#">Manage Requests</a>
       </div>
       <div class="card">
-        <h3>Estoque</h3>
-        <p>Monitorizar e atualizar o stock disponível.</p>
-        <a href="#">Gerir Estoque</a>
+        <h3>Stock</h3>
+        <p>Manage available stock and add.</p>
+        <a href="#">Manage Stock</a>
       </div>
       <div class="card">
-        <h3>Promoções</h3>
-        <p>Criar e gerir promoções de produtos.</p>
-        <a href="#">Gerir Promoções</a>
+        <h3>Promotions</h3>
+        <p>Create and manage promotions.</p>
+        <a href="#">Manage Promotions</a>
       </div>
     </div>
     <footer>
