--- a/loja/templates/cart.html
+++ b/loja/templates/cart.html
@@ -51,11 +51,11 @@
       <table>
         <thead>
           <tr>
-            <th>Produto</th>
-            <th>Preço</th>
-            <th>Quantidade</th>
-            <th>Subtotal</th>
-            <th>Ações</th>
+            <th>Product</th>
+            <th>Price</th>
+            <th>Amount</th>
+            <th>Total</th>
+            <th>Actions</th>
           </tr>
         </thead>
         <tbody>
@@ -77,9 +77,9 @@
       </table>
     </form>
     <p class="total">Total: € {{ carrinho.total }}</p>
-    <a href="{% url 'checkout' %}" class="checkout">Finalizar Compra</a>
+    <a href="{% url 'checkout' %}" class="checkout">Buy</a>
     {% else %}
-    <p>O seu carrinho está vazio.</p>
+    <p>Your cart is empty.</p>
     {% endif %}
   </div>
 </body>
