--- a/loja/templates/produto_form.html
+++ b/loja/templates/produto_form.html
@@ -30,11 +30,11 @@
 </head>
 <body>
   <div class="container">
-    <h2>Novo Produto - TechMart</h2>
+    <h2>New Product - TechMart</h2>
     <form method="POST">
       {% csrf_token %}
       {{ form.as_p }}
-      <button type="submit" class="btn">Salvar</button>
+      <button type="submit" class="btn">Save</button>
     </form>
   </div>
 </body>
