--- a/loja/templates/seller_page.html
+++ b/loja/templates/seller_page.html
@@ -91,12 +91,12 @@
     <div class="content">
       <div class="card">
         <h3>Products</h3>
-        <p>Add, edit e manage produtos.</p>
+        <p>Add, edit and manage products.</p>
         <a href="{% url 'produto_list' %}">Manage Products</a>
       </div>
       <div class="card">
         <h3>Requests</h3>
-        <p>Check requests made by clients e update status.</p>
+        <p>Check requests made by clients and update status.</p>
         <a href="#">Manage Requests</a>
       </div>
       <div class="card">
