fixes to seller page

--- a/loja/templates/seller_page.html
+++ b/loja/templates/seller_page.html
@@ -95,13 +95,13 @@
         <a href="{% url 'produto_list' %}">Manage Products</a>
       </div>
       <div class="card">
-        <h3>Requests</h3>
-        <p>Check requests made by clients and update status.</p>
-        <a href="#">Manage Requests</a>
+        <h3>Orders</h3>
+        <p>Check orders made by clients and update status.</p>
+        <a href="#">Manage Orders</a>
       </div>
       <div class="card">
         <h3>Stock</h3>
-        <p>Manage available stock and add.</p>
+        <p>Manage available stock.</p>
         <a href="#">Manage Stock</a>
       </div>
       <div class="card">
