--- a/loja/templates/produto_list_cliente.html
+++ b/loja/templates/produto_list_cliente.html
@@ -39,7 +39,7 @@
       <h3>{{ produto.nome }}</h3>
       <p>{{ produto.descricao|truncatewords:15 }}</p>
       <p class="price">€ {{ produto.preco }}</p>
-      <a href="{% url 'adicionar_carrinho' produto.id %}" class="btn">Add to cart</a>
+      <a href="{% url 'add_pedido' produto.id %}" class="btn">Add to cart</a>
     </div>
     {% empty %}
     <p>No product available.</p>
